syntax = "proto3";

package user;
option go_package = "proto/userpb"; // üëà –¥–æ–±–∞–≤–∏–ª–∏ —ç—Ç—É —Å—Ç—Ä–æ—á–∫—É

service UserService {
  rpc RegisterUser(UserRequest) returns (UserResponse);
  rpc AuthenticateUser(AuthRequest) returns (AuthResponse);
  rpc GetUserProfile(UserID) returns (UserProfile);
}

message UserRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  string message = 1;
  string user_id = 2;
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  bool success = 1;
  string token = 2;
}

message UserID {
  string user_id = 1;
}

message UserProfile {
  string user_id = 1;
  string username = 2;
}
